# backend/docs/swagger.yaml
@@ -349,7 +349,7 @@ info:
   title: Gestão Financeira API
   version: "1.0"
 paths:
-  /api/v1/accounts:
+  /accounts:
     get:
       consumes:
       - application/json
@@ -432,7 +432,7 @@ paths:
       summary: Create a new account
       tags:
       - accounts
-  /api/v1/accounts/{id}:
+  /accounts/{id}:
     get:
       consumes:
       - application/json
@@ -481,7 +481,7 @@ paths:
       summary: Get account by ID
       tags:
       - accounts
-  /api/v1/auth/login:
+  /auth/login:
     post:
       consumes:
       - application/json
@@ -524,7 +524,7 @@ paths:
       summary: Login user
       tags:
       - auth
-  /api/v1/auth/register:
+  /auth/register:
     post:
       consumes:
       - application/json
@@ -567,7 +567,7 @@ paths:
       summary: Register a new user
       tags:
       - auth
-  /api/v1/transactions:
+  /transactions:
     get:
       consumes:
       - application/json
@@ -649,7 +649,7 @@ paths:
       summary: Create a new transaction
       tags:
       - transactions
-  /api/v1/transactions/{id}:
+  /transactions/{id}:
     delete:
       consumes:
       - application/json
